distribution/kubeflow/notebooks/jupyter-web-app/enable-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-web-app-deployment
  namespace: kubeflow
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
