distribution/kubeflow/notebooks/jupyter-web-app/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jupyter-web-app
  namespace: kubeflow
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: jupyter-web-app
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
